Обновление зависимостей и JDK21 (#359)
* обновление зависимостей

* jdk 21
minor fixes

* deps

* GA